[gd_scene load_steps=3 format=3 uid="uid://n64cl2lpcgcl"]

[ext_resource type="Script" uid="uid://dg6gh8wyfq4dr" path="res://games/rps.gd" id="1_2ekhc"]
[ext_resource type="FontFile" uid="uid://cdga3g45r6hw0" path="res://assets/NotoColorEmoji-Regular.ttf" id="2_qsgn8"]

[node name="G-RPS" type="Node2D"]
visible = false
script = ExtResource("1_2ekhc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerScoreLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="ResultLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ComputerScoreLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ControlSpacer" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlSpacer2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RockButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qsgn8")
text = "ü™®
Rock"
metadata/_edit_use_anchors_ = true

[node name="PaperButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qsgn8")
text = "üì∞
Paper"
metadata/_edit_use_anchors_ = true

[node name="ScissorsButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qsgn8")
text = "‚úÇÔ∏è
Scissors"
metadata/_edit_use_anchors_ = true

[node name="ControlSpacer3" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "reset"
metadata/_edit_use_anchors_ = true
